# AutoShape

./: AutoShape.kdev4  CMakeLists.txt  Doxyfile  INSTALL  License.txt  README.md  ToDo  description.txt
image/: shapes.odg
shp/: es_test.shp  es_unicode.shp  es_win.shp  my_test.shp  my_test_1.shp
src/: draw_point.cpp  draw_point.h  draw_var.cpp  draw_var.h  edit_menu.cpp  edit_menu.h  font.cpp  font.h  forma.cpp  forma.h  forma_l.cpp  forma_l.h  main.cpp  stack.cpp  stack.h  strings.cpp  strings.h
src/dialogs/: dialog_arc_digit_edit.cpp  dialog_arc_digit_edit.h  dialog_arc_digit_edit.ui  dialog_arc_octant_edit.cpp  dialog_arc_octant_edit.h  dialog_arc_octant_edit.ui  dialog_draw_vars.cpp  dialog_draw_vars.h  dialog_draw_vars.ui  dialog_font_header.cpp  dialog_font_header.h  dialog_font_header.ui  dialog_forms_find.cpp  dialog_forms_find.h  dialog_forms_find.ui  dialog_forms_header.cpp  dialog_forms_header.h  dialog_forms_header.ui  dialog_line_edit.cpp  dialog_line_edit.h  dialog_line_edit.ui  dialog_multi_arc_edit.cpp  dialog_multi_arc_edit.h  dialog_multi_arc_edit.ui  dialog_multi_line_edit.cpp  dialog_multi_line_edit.h  dialog_multi_line_edit.ui  dialog_pen_edit.cpp  dialog_pen_edit.h  dialog_pen_edit.ui  dialog_reference_edit.ui  dialog_scale_edit.cpp  dialog_scale_edit.h  dialog_scale_edit.ui  dialog_stack_edit.cpp  dialog_stack_edit.h  dialog_stack_edit.ui  main_form.cpp  main_form.h  main_form.ui  (+1 more)
src/menu/: menu.cpp  menu.h
src/shapes/: shape_.cpp  shape_.h  shape_12.cpp  shape_12.h  shape_34.cpp  shape_34.h  shape_56.cpp  shape_56.h  shape_7.cpp  shape_7.h  shape_89.cpp  shape_89.h  shape_a.cpp  shape_a.h  shape_b.cpp  shape_b.h  shape_cd.cpp  shape_cd.h  shape_e.cpp  shape_e.h  shapes.cpp  shapes.h
templates/: cpp  h
